--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
   },
   "homepage": "https://github.com/Lendruk/MunchiJS#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "datauri": "^2.0.0",
     "express": "^4.17.1",
+    "generate-password": "^1.5.1",
+    "mongoose": "^5.10.3",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.3",
+    "@types/mongoose": "^5.7.36",
     "@types/socket.io": "^2.1.8",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -43,6 +46,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.1.1"
+    "ts-jest": "^26.1.1",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   }
 }
